--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,36 +1,82 @@
 .benefits {
-  padding: 94px 0px 47px 0px;
+  padding: 60px 0px 60px 0px;
+  // padding: 94px 0px 47px 0px;
 }
 .benefits-list {
-  display: flex;
-  justify-content: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
   &__description {
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 30px;
+      &:nth-child(2) {
+        margin-right: 0px;
+      }
+      &:nth-child(4) {
+        margin-right: 0px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0px;
+      }
     }
   }
   &__icon {
-    width: 270px;
-    height: 120px;
     background-color: var(--background-section-command-and-button-portfolio);
     border-radius: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 120px;
+    margin: 0 auto;
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
 
     margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
   }
   &__title {
     color: var(--main-text-color);
     @include font(700, 14px, 1.14, 0.03em);
     text-transform: uppercase;
-
     margin-bottom: 10px;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      text-align: start;
+    }
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+    }
   }
   &__text {
     color: var(--secont-text-color);
     @include font(400, 14px, 1.7, 00.03em);
-    max-width: 270px;
+    max-width: 450px;
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+      max-width: 270px;
+    }
   }
 }
