--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -1,36 +1,86 @@
 .command {
   background-color: var(--background-section-command-and-button-portfolio);
-  padding-top: 94px;
-  padding-bottom: 94px;
   text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
+
 .command-list {
-  display: flex;
-  flex-wrap: wrap;
-  &__people {
+
+  @media screen and (min-width: 786px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+    &__people {
     background-color: var(--white-text-color);
-    width: 270px;
-    margin-right: 30px;
+    margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    &:last-child {
-      margin-right: 0px;
+    & img {
+      width: auto;
+    }
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      & img {
+        width: 450px;
+      }
+    }
+    @media screen and (min-width: 768px) {
+      width: 354px; 
+      margin-right: 30px;
+      &:nth-child(2) {
+        margin-right: 0px;
+      }
+      &:nth-child(4) {
+        margin-right: 0px;
+      }
+      
+      & img {
+        width: 354px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      & img {
+        width: 270px;
+      }  
+ 
     }
   }
-}
+
 .command-container {
-  padding: 30px 0px;
+  padding: 30px 0px 24px 0px;
+  @media screen and (min-width: 768px) {
+    padding: 30px 0px 24px 0px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 30px 0px;
+  }
 }
+
 .command-title {
   margin-bottom: 10px;
 
   color: var(--main-text-color);
   @include font(500, 16px, 1.18, 00.03em);
 }
+
 .command-text {
   color: var(--secont-text-color);
-  @include font(400, 16px, 1.18, 0.03);
-
+  @include font(400, 16px, 1.18, 0.03em);
   margin-bottom: 16px;
 }
