--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -63,9 +63,10 @@
 .social-list__icon_fill {
   fill: var(--white-text-color);
 }
-
 .right-subscribe {
   margin-left: 93px;
+  display: flex;
+
   &__text {
     font-style: normal;
     @include font(700, 14px, 1.14, 0.03em);
@@ -75,6 +76,10 @@
 
     margin-bottom: 20px;
   }
+  &__form_position {
+    display: flex;
+  }
+
   &__label {
     display: flex;
   }
@@ -97,13 +102,13 @@
       align-items: center;
     }
   }
+
   &__btn-submit {
     display: flex;
     align-items: center;
-    text-align: center;
+
     border-radius: 4px;
     min-width: 200px;
-    padding: 10px;
     border: none;
     color: var(--white-text-color);
     background-color: var(--accent);
