--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,32 @@ img {
   padding-bottom: 94px;
 }
 
+@media screen and (max-width: 1199px) {
+  .works {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .works img {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+  }
+}
+
 .works-list {
   display: flex;
   margin-right: -30px;
@@ -492,6 +518,60 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .command-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.command-list__people {
+  background-color: var(--white-text-color);
+  margin-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.command-list__people img {
+  width: auto;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .command-list__people {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .command-list__people img {
+    width: 354px;
+  }
+  .command-list__people:nth-child(2) {
+    margin-right: 0;
+  }
+  .command-list__people:nth-child(4) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command-list__people {
+    width: 270px;
+    margin-right: 30px;
+  }
+  .command-list__people img {
+    width: 270px;
+  }
+  .command-list__people:last-child {
+    margin-right: 0px;
+  }
+}
+
 .command-container {
   padding: 30px 0px 24px 0px;
 }
@@ -527,7 +607,25 @@ img {
 }
 
 .clients {
-  padding: 94px 0px;
+  padding: 60px 0px;
+}
+
+@media screen and (min-width: 480px) {
+  .clients {
+    padding: 60px 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients {
+    padding: 60px 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0px;
+  }
 }
 
 .clients__title {
@@ -536,24 +634,95 @@ img {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
-.clients-list {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .clients-list__item {
-  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
-.clients-list__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients-list__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients-list__item:nth-child(2) {
+    margin-right: 0px;
+  }
+  .clients-list__item:nth-child(4) {
+    margin-right: 0px;
+  }
+  .clients-list__item:nth-child(5) {
+    margin-bottom: 0px;
+  }
+  .clients-list__item:nth-child(6) {
+    margin-right: 0px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-list__item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients-list__item:nth-child(3) {
+    margin-right: 0px;
+  }
+  .clients-list__item:nth-child(4) {
+    margin-bottom: 0px;
+  }
+  .clients-list__item:nth-child(5) {
+    margin-bottom: 0px;
+  }
+  .clients-list__item:nth-child(6) {
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    margin-right: 30px;
+  }
+  .clients-list__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .clients-list__link {
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
@@ -570,6 +739,24 @@ img {
 .clients-list__link:hover svg,
 .clients-list__link:focus svg {
   fill: var(--accent);
+}
+
+@media screen and (min-width: 480px) {
+  .clients-list__link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list__link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__link {
+    width: 170px;
+  }
 }
 
 .clients-list__icon {
@@ -933,7 +1120,13 @@ img {
 }
 
 .portfolio {
-  padding: 94px 0px 94px 0px;
+  padding: 60px 0px 60px 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding: 94px 0px 94px 0px;
+  }
 }
 
 .portfolio a {
@@ -942,22 +1135,47 @@ img {
 
 .menu-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 
 .menu-list__item {
   margin-right: 8px;
+  margin-bottom: 15px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-list__item:last-child {
-  margin-right: 0;
 }
 
 .menu-list__item:hover, .menu-list__item:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-list:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-list:last-child {
+    margin-right: 0px;
+  }
 }
 
 .menu-list__button {
@@ -990,32 +1208,78 @@ img {
   font-family: inherit;
 }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .portfolio-list__item {
   margin-bottom: 30px;
+  width: 100%;
   background-color: var(--white-text-color);
-  width: 370px;
   border: 1px solid #eeeeee;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list__item img {
+  width: 100%;
 }
 
 .portfolio-list__item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-list__item:nth-child(n + 7) {
-  margin-bottom: 0;
+@media screen and (min-width: 480px) {
+  .portfolio-list__item {
+    width: 450px;
+  }
+  .portfolio-list__item img {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-list__item {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .portfolio-list__item img {
+    width: 354px;
+  }
+  .portfolio-list__item:nth-child(even) {
+    margin-right: 0px;
+  }
+  .portfolio-list__item:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list__item {
+    width: 370px;
+    margin-right: 0px;
+  }
+  .portfolio-list__item img {
+    width: 370px;
+  }
+  .portfolio-list__item:nth-child(n + 7) {
+    margin-bottom: 0;
+  }
 }
 
 .overlay {
   position: relative;
   width: 100%;
-  height: 294px;
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
