--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,23 +1,88 @@
 .clients {
-  padding: 94px 0px;
+  padding: 60px 0px;
+  @media screen and (min-width: 480px) {
+    padding: 60px 0px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 60px 0px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0px;
+  }
+
   &__title {
     @include font(700, 36px, 1.16, 00.03em);
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
 }
-
 .clients-list {
-  display: flex;
-  justify-content: center;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+  }
+
   &__item {
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0;
+    margin-bottom: 30px;
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(2) {
+        margin-right: 0px;
+      }
+      &:nth-child(4) {
+        margin-right: 0px;
+      }
+      &:nth-child(5) {
+        margin-bottom: 0px;
+      }
+      &:nth-child(6) {
+        margin-right: 0px;
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(3) {
+        margin-right: 0px;
+      }
+      &:nth-child(4) {
+        margin-bottom: 0px;
+      }
+      &:nth-child(5) {
+        margin-bottom: 0px;
+      }
+      &:nth-child(6) {
+        margin-right: 0px;
+        margin-bottom: 0px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
   &__link {
-    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid var(--icon-color);
     border-radius: 4px;
@@ -33,7 +98,17 @@
     &:focus svg {
       fill: var(--accent);
     }
+    @media screen and (min-width: 480px) {
+      width: 210px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
   }
+
   &__icon {
     fill: var(--icon-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
