--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -14,8 +14,7 @@
 }
 
 .command-list {
-
-  @media screen and (min-width: 786px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
   }
@@ -24,7 +23,7 @@
     display: flex;
     flex-wrap: wrap;
   }
-    &__people {
+  &__people {
     background-color: var(--white-text-color);
     margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -33,35 +32,31 @@
     & img {
       width: auto;
     }
-    @media screen and (min-width: 480px) {
-      width: 450px;
-      & img {
-        width: 450px;
-      }
-    }
-    @media screen and (min-width: 768px) {
-      width: 354px; 
-      margin-right: 30px;
-      &:nth-child(2) {
-        margin-right: 0px;
-      }
-      &:nth-child(4) {
-        margin-right: 0px;
-      }
-      
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 354px;
       & img {
         width: 354px;
+      }
+      margin-right: 30px;
+      &:nth-child(2) {
+        margin-right: 0;
+      }
+      &:nth-child(4) {
+        margin-right: 0;
       }
     }
     @media screen and (min-width: 1200px) {
       width: 270px;
       & img {
         width: 270px;
-      }  
- 
+      }
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0px;
+      }
     }
   }
-
+}
 .command-container {
   padding: 30px 0px 24px 0px;
   @media screen and (min-width: 768px) {
