--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,20 +1,33 @@
 .portfolio {
-  padding: 94px 0px 94px 0px;
+  padding: 60px 0px 60px 0px;
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0px 94px 0px;
+  }
   & a {
     text-decoration: none;
   }
 }
 .menu-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+
   &__item {
     margin-right: 8px;
+    margin-bottom: 15px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
       border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:last-child {
-      margin-right: 0;
-    }
+
     &:hover,
     &:focus {
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
@@ -22,6 +35,18 @@
       border-radius: 4px;
     }
   }
+
+  @media screen and (min-width: 768px) {
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &:last-child {
+      margin-right: 0px;
+    }
+  }
+
   &__button {
     display: inline-block;
     margin: 0 auto;
@@ -51,37 +76,73 @@
 }
 
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 
   &__item {
     margin-bottom: 30px;
-
+    width: 100%;
     background-color: var(--white-text-color);
-    width: 370px;
-
     border: 1px solid #eeeeee;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    & img {
+      width: 100%;
+    }
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
-    &:nth-child(n + 7) {
-      margin-bottom: 0;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      & img {
+        width: 450px;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      & img {
+        width: 354px;
+      }
+      margin-right: 30px;
+      &:nth-child(even) {
+        margin-right: 0px;
+      }
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: 370px;
+      & img {
+        width: 370px;
+      }
+      margin-right: 0px;
+      &:nth-child(n + 7) {
+        margin-bottom: 0;
+      }
     }
   }
 }
 .overlay {
   position: relative;
   width: 100%;
-  height: 294px;
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
   &:hover &__item {
     transform: translatey(0);
   }
+
   &__item {
     position: absolute;
     top: 0;
