--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -14,3 +14,10 @@
     margin: 0 auto;
   }
 }
+
+@media screen and (min-width: 480px) {
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1200px) {
+}
