--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,17 @@ img {
   display: flex;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-container__logo {
+    padding: 24px 0px 25px 0px;
+    margin-right: 88px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .nav-container__logo {
     padding: 24px 0px 25px 0px;
@@ -174,6 +185,12 @@ img {
 
 .nav-list {
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-list {
+    display: flex;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -202,6 +219,12 @@ img {
   text-decoration: none;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-list__link {
+    padding: 32px 0px;
+  }
 }
 
 .nav-list__link:hover, .nav-list__link:focus {
@@ -233,28 +256,67 @@ img {
   color: var(--accent);
 }
 
-.nav-list__link_text-col {
-  color: var(--secont-text-color);
-}
-
-.nav-list__icon {
-  fill: var(--secont-text-color);
-  margin-right: 10px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .contacts {
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    padding: 21px 0px 21px 0px;
+  }
+  .contacts__items:first-child {
+    margin-bottom: 10px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .contacts {
     display: flex;
+    flex-direction: row;
     margin-left: auto;
+    padding: 32px 0px;
+    margin-bottom: 0px;
   }
   .contacts__items:first-child {
     margin-right: 50px;
+    margin-bottom: 0px;
   }
+}
+
+.contacts__link {
+  color: var(--secont-text-color);
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.contacts__link:hover svg,
+.contacts__link:focus svg {
+  fill: var(--accent);
+}
+
+.contacts__icon {
+  fill: var(--secont-text-color);
+  margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-open-btn {
@@ -278,15 +340,36 @@ img {
   fill: var(--accent);
 }
 
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
 .mob-menu {
   position: fixed;
   background-color: #ffffff;
   top: 0;
   width: 100vw;
   height: 100vh;
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding: 24px 20px 24px 20px;
   z-index: 5;
+}
+
+@media screen and (min-width: 480px) {
+  .mob-menu {
+    padding: 48px 40px 48px 40px;
+  }
+}
+
+.mob-menu__container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-menu__bottom {
+  margin-top: auto;
 }
 
 .menu-close-btn {
@@ -308,6 +391,114 @@ img {
 
 .menu-close-btn:hover, .menu-close-btn:focus {
   fill: var(--accent);
+}
+
+.mob-menu-list__item {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__item:last-child {
+  margin-bottom: 0px;
+}
+
+.mob-menu-list__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+.mob-menu-list__link:hover, .mob-menu-list__link:focus {
+  color: var(--accent);
+}
+
+.mob-contacts-list__items_number {
+  margin-bottom: 32px;
+}
+
+.mob-contacts-list__link_number {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--accent);
+}
+
+@media screen and (min-width: 480px) {
+  .mob-contacts-list__link_number {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+}
+
+.mob-contacts-list__items_mail {
+  margin-bottom: 64px;
+}
+
+.mob-contacts-list__link_mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--secont-text-color);
+  text-decoration: none;
+}
+
+.mob-social-list {
+  display: flex;
+}
+
+.mob-social-list__item {
+  margin-right: 20px;
+}
+
+.mob-social-list__item:last-child {
+  margin-right: 0px;
+}
+
+.mob-social-list__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent);
+  text-decoration: none;
+  position: relative;
+}
+
+.mob-social-list__link.mob-social-list__link_decor::before {
+  content: "";
+  height: 10px;
+  width: 1px;
+  border-radius: 2px;
+  background-color: var(--secont-text-color);
+  position: absolute;
+  bottom: 3px;
+  right: -10px;
+}
+
+@media screen and (min-width: 480px) {
+  .mob-social-list__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+  }
+  .mob-social-list__link.mob-social-list__link_decor::before {
+    content: "";
+    height: 14px;
+    width: 1px;
+    border-radius: 2px;
+    background-color: var(--secont-text-color);
+    position: absolute;
+    bottom: 3px;
+    right: -10px;
+  }
 }
 
 .hero {
@@ -868,7 +1059,26 @@ img {
 
 .footer-content {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-content {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-between;
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-content {
+    align-items: baseline;
+    flex-wrap: nowrap;
+    align-content: start;
+    justify-content: start;
+  }
 }
 
 .footer-content__logo {
@@ -876,16 +1086,34 @@ img {
   color: var(--main-text-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   text-decoration: none;
   display: flex;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-content__logo {
+    justify-content: start;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+  }
 }
 
 .footer-left-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-left-list {
+    align-items: start;
+  }
 }
 
 .footer-left-list__item {
@@ -893,7 +1121,13 @@ img {
 }
 
 .footer-left-list__item:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-left-list__item:last-child {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-left-list__home-adress {
@@ -925,7 +1159,18 @@ img {
 }
 
 .center-social {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .center-social {
+    align-items: start;
+    margin-left: 70px;
+    margin-bottom: 0px;
+  }
 }
 
 .center-social__text {
@@ -948,8 +1193,26 @@ img {
 }
 
 .right-subscribe {
-  margin-left: 93px;
   display: flex;
+}
+
+@media screen and (min-width: 1200px) {
+  .right-subscribe {
+    margin-left: 93px;
+  }
+}
+
+.right-subscribe > form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .right-subscribe > form {
+    display: block;
+  }
 }
 
 .right-subscribe__text {
@@ -965,6 +1228,15 @@ img {
 
 .right-subscribe__form_position {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .right-subscribe__form_position {
+    flex-direction: row;
+  }
 }
 
 .right-subscribe__label {
@@ -972,8 +1244,8 @@ img {
 }
 
 .right-subscribe__input {
-  min-width: 358px;
-  margin-right: 12px;
+  width: 250px;
+  margin-bottom: 20px;
   padding: 15px 0px 15px 16px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -994,6 +1266,26 @@ img {
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
+}
+
+@media screen and (min-width: 480px) {
+  .right-subscribe__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .right-subscribe__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .right-subscribe__input {
+    margin-right: 12px;
+    margin-bottom: 0px;
+    max-width: 358px;
+  }
 }
 
 .right-subscribe__btn-submit {
@@ -1029,8 +1321,8 @@ img {
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  width: 290px;
+  width: 100%;
   background: var(--white-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1039,6 +1331,20 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px 40px 40px 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__close-btn {
@@ -1149,7 +1455,7 @@ img {
   margin-top: 20px;
 }
 
-.form-list__check:checked + .form-list__check-text span {
+.form-list__check:checked + .form-list__check-text .form-list__check-text_valid {
   background-color: var(--accent);
   border: none;
 }
@@ -1188,10 +1494,19 @@ img {
 }
 
 .form-list__check-text > a {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--accent);
+  color: var(--main-text-color);
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-list__check-text > a {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .form-list__check-icon {
@@ -1211,8 +1526,35 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-  padding: 10px 55px;
-  margin: 30px 124px 0px 124px;
+  padding: 4px 25px;
+  margin: 30px auto 0px auto;
+}
+
+@media screen and (min-width: 480px) {
+  .form-list__submit-btn {
+    padding: 10px 55px;
+    margin: 30px auto 0px auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .form-list__submit-btn {
+    padding: 10px 55px;
+    margin: 30px auto 0px auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-list__submit-btn {
+    padding: 10px 55px;
+    margin: 30px auto 0px auto;
+  }
+}
+
+.form-list__text_change {
+  color: var(--accent);
+  text-decoration: underline;
+  background-color: transparent;
 }
 
 .portfolio {
