--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,28 +2,65 @@
   background-color: var(--background-main-section-studio-and-footer);
   padding: 60px 0px 60px 0px;
   margin: 0px auto;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+  }
 }
 .footer-content {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-between;
+    justify-content: space-evenly;
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: baseline;
+    flex-wrap: nowrap;
+    align-content: start;
+    justify-content: start;
+  }
+
   &__logo {
     margin-bottom: 20px;
 
     color: var(--main-text-color);
     font-family: Raleway, sans-serif;
-    @include font(700, 26px, 1.2, 0.03em);
+    @include font(700, 24px, 1.16, 0.03em);
     text-decoration: none;
     display: flex;
+    justify-content: center;
+    @media screen and (min-width: 1200px) {
+      justify-content: start;
+      @include font(700, 26px, 1.2, 0.03em);
+    }
   }
 }
 
 .footer-left-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: start;
+  }
   &__item {
     margin-bottom: 9px;
     &:last-child {
-      margin-bottom: 0px;
+      margin-bottom: 60px;
+    }
+    @media screen and (min-width: 768px) {
+    }
+    @media screen and (min-width: 1200px) {
+      &:last-child {
+        margin-bottom: 60px;
+      }
     }
   }
   &__home-adress {
@@ -46,7 +83,18 @@
 }
 
 .center-social {
-  margin-left: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    align-items: start;
+    margin-left: 70px;
+    margin-bottom: 0px;
+  }
+
   &__text {
     font-style: normal;
     @include font(700, 14px, 1.14, 0.03em);
@@ -64,9 +112,26 @@
   fill: var(--white-text-color);
 }
 .right-subscribe {
-  margin-left: 93px;
   display: flex;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
+  & > form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+    @media screen and (min-width: 768px) {
+    }
+    @media screen and (min-width: 1200px) {
+      display: block;
+      // display: flex;
+      // align-items: start;
+    }
+  }
   &__text {
     font-style: normal;
     @include font(700, 14px, 1.14, 0.03em);
@@ -75,17 +140,29 @@
     color: var(--white-text-color);
 
     margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+    }
+    @media screen and (min-width: 1200px) {
+    }
   }
   &__form_position {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
   }
 
   &__label {
     display: flex;
   }
   &__input {
-    min-width: 358px;
-    margin-right: 12px;
+    width: 250px;
+    margin-bottom: 20px;
     padding: 15px 0px 15px 16px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -100,6 +177,17 @@
       @include font(400, 16px, 1.25, 0.03em);
       display: flex;
       align-items: center;
+    }
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 12px;
+      margin-bottom: 0px;
+      max-width: 358px;
     }
   }
 
