--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: var(--white-text-color);
   color: var(--main-text-color);
@@ -319,17 +320,33 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.container-btn {
+  width: 100%;
+  position: relative;
+  padding-right: 15px;
+  margin: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container-btn {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-btn {
+    display: none;
+  }
+}
+
 .menu-open-btn {
   width: 40px;
   height: 40px;
-  display: block;
-  margin-left: auto;
-  margin-bottom: 10px;
   background-color: transparent;
   border: none;
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: -50px;
+  right: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -517,13 +534,13 @@ img {
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/hero/herobgc-mob-2x-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), Ы rgba(47, 48, 58, 0.4)), url(../images/hero/herobgc-mob-2x-min.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: url(../images/hero/herobgc-tab-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/herobgc-tab-min.jpg);
     padding-top: 118px;
     padding-bottom: 118px;
   }
@@ -531,13 +548,13 @@ img {
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/hero/herobgc-tab-2x-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/herobgc-tab-2x-min.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: url(../images/hero/herobgc.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/herobgc.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
     margin: 0 auto;
@@ -548,7 +565,7 @@ img {
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/hero/herobgc-2x-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/herobgc-2x-min.jpg);
   }
 }
 
@@ -607,6 +624,12 @@ img {
   padding: 60px 0px 60px 0px;
 }
 
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding: 94px 0px 47px 0px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .benefits-list {
     display: flex;
@@ -630,6 +653,7 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits-list__description {
+    margin-bottom: 0px;
     margin-right: 30px;
   }
   .benefits-list__description:nth-child(2) {
@@ -642,6 +666,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .benefits-list__description {
+    margin-bottom: 0px;
     margin-right: 30px;
   }
   .benefits-list__description:last-child {
@@ -841,13 +866,18 @@ img {
   .command-list__people:nth-child(2) {
     margin-right: 0;
   }
+  .command-list__people:nth-child(3) {
+    margin-bottom: 0px;
+  }
   .command-list__people:nth-child(4) {
     margin-right: 0;
+    margin-bottom: 0px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .command-list__people {
+    margin-bottom: 0px;
     width: 270px;
     margin-right: 30px;
   }
@@ -1001,6 +1031,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .clients-list__item {
+    margin-bottom: 0px;
     margin-right: 30px;
   }
   .clients-list__item:last-child {
@@ -1126,7 +1157,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .footer-left-list__item:last-child {
-    margin-bottom: 60px;
+    margin-bottom: 0px;
   }
 }
 
@@ -1605,13 +1636,19 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .menu-list:last-child {
+  .menu-list__item {
+    margin-bottom: 0px;
+  }
+  .menu-list__item:last-child {
     margin-right: 0;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .menu-list:last-child {
+  .menu-list__item {
+    margin-bottom: 0px;
+  }
+  .menu-list__item:last-child {
     margin-right: 0px;
   }
 }
