--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -75,6 +75,7 @@
       }
     }
     @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
       margin-right: 30px;
       &:last-child {
         margin-right: 0;
