--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -41,11 +41,16 @@
       &:nth-child(2) {
         margin-right: 0;
       }
+      &:nth-child(3) {
+        margin-bottom: 0px;
+      }
       &:nth-child(4) {
         margin-right: 0;
+        margin-bottom: 0px;
       }
     }
     @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
       width: 270px;
       & img {
         width: 270px;
