--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -34,16 +34,17 @@
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
     }
-  }
-
-  @media screen and (min-width: 768px) {
-    &:last-child {
-      margin-right: 0;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+      &:last-child {
+        margin-right: 0;
+      }
     }
-  }
-  @media screen and (min-width: 1200px) {
-    &:last-child {
-      margin-right: 0px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
+      &:last-child {
+        margin-right: 0px;
+      }
     }
   }
 
